--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <video autoplay loop muted plays-inline class="back-video">
-    <source src="/static/images/video.mp4" type="video/mp4">
+    <source src="README.md/video.mp4" type="video/mp4">
   </video>
   <img src="/static/images/mychildhoodpic.png" alt="" class="userpic">
   
