--- a/templates/index.html
+++ b/templates/index.html
@@ -35,11 +35,11 @@
               <input type="text" name="sqft" placeholder="For example 1500,2000,10000 etc.." required>
             </div>
             <div class="input-box">
-              <span class="details"><b>Enter no of bathrooms</b></span>
+              <span class="details"><b>Enter no of Bathrooms</b></span>
               <input type="text" name="bath" placeholder="Enter" required>
             </div>
             <div class="input-box">
-              <span class="details"><b>Enter no of upstairs</b></span>
+              <span class="details"><b>Enter no of Balconies</b></span>
               <input type="text" name="upst" placeholder="Enter no of upstairs required..." required>
             </div>
 
