--- a/templates/submit.html
+++ b/templates/submit.html
@@ -69,7 +69,7 @@
                             <td>{{ bath }}</td>
                         </tr>
                         <tr>
-                            <td>No Of UPSTAIRS</td>
+                            <td>No Of Balconies</td>
                             <td>{{ upst }}</td>
                         </tr>
                         <br>
