--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <img src="/static/images/mychildhoodpic.png" alt="" class="userpic">
   
     <div class="container">
-      <div class="title"><b>HOUSE PRICE PREDICTION</b></div>
+      <div class="title"><b> BANGALORE HOUSE PRICE PREDICTION</b></div>
       <div class="content">
         <form action="{{ url_for('predict')}}" method="POST">
           <div class="user-details">
