--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,11 @@
     <title>Model deployment</title>
 </head>
 <body>
+    <video autoplay loop muted in-line class="hero">
+        <source src="https://drive.google.com/uc?export=download&id=1YvmIzfg5JFkHd9TVqZhitjzumdA0SE1r" type='video/mp4'>
+    </video>
   
-  <img src="/static/images/mychildhoodpic.png" alt="" class="userpic">
+    <img src="/static/images/mychildhoodpic.png" alt="" class="userpic">
   
     <div class="container">
       <div class="title"><b> BANGALORE HOUSE PRICE PREDICTION</b></div>
