--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <title>Model deployment</title>
 </head>
 <body>
-    <video autoplay loop muted in-line class="hero">
+    <video autoplay loop muted in-line class="back-video">
         <source src="https://drive.google.com/uc?export=download&id=1YvmIzfg5JFkHd9TVqZhitjzumdA0SE1r" type='video/mp4'>
     </video>
   
